# Stratum

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  format-check.yml
include/nano_cache_sim/: cache_sim.hpp  policies.hpp  simulation.hpp  trace_parser.hpp
include/stratum/: cache_sim.hpp  policies.hpp  simulation.hpp  trace_parser.hpp
scripts/: config.rkt  convert_lackey.sh  gen_test_data.py
src/: main.cpp
test/data/: gaussian.txt  gen.py  largeloop.txt  random.txt  sequential.txt  spatial.txt  temporal.txt
test/unit/: test_main.cpp
